[tool.poetry]
name = "workbench"
version = "0.0.1"
description = "My labby workbench"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
labby = { git = "https://github.com/luizribeiro/labby.git", branch = "master" }

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
